# cloud-test

./: .gitignore  GYM.html  Makefile  Marketplace.html  README.md  docker-compose.yml  index.html
.github/workflows/: cd-placeholder.yml  ci.yml
frontend/: Dockerfile  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
infra/localstack/: init-aws.sh
infra/otel/: otel-collector-config.yaml
infra/terraform/: main.tf  providers.tf
libs/python-common/: README.md  pyproject.toml
libs/python-common/src/python_common/: __init__.py  auth.py  aws.py  config.py  events.py  logging.py  tracing.py
libs/python-common/tests/: test_smoke.py
scripts/: run-local.sh
services/auth-service/: Dockerfile
services/auth-service/app/: main.py
services/cart-service/: Dockerfile
services/cart-service/app/: main.py
services/catalog-service/: Dockerfile
services/catalog-service/app/: main.py
services/inventory-service/: Dockerfile
services/inventory-service/app/: main.py
services/notification-service/: Dockerfile  requirements.txt
services/notification-service/app/: main.py  worker.py
services/order-service/: Dockerfile  requirements.txt
services/order-service/app/: main.py
services/payment-service/: Dockerfile
services/payment-service/app/: main.py
